# pureshell

./: .bumpversion.cfg  .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_examples.py
.github/workflows/: ci.yml  publish-to-pypi.yml  python-publish.yml
docs/: conf.py  index.rst
examples/: __init__.py  dynamic_behavior_example.py  game_example.py  run.py  shopping_cart_example.py
pureshell/: __init__.py
tests/: conftest.py  test_framework.py  test_game_example.py  test_readme_examples.py  test_shopping_cart.py
