[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pureshell"
version = "0.2.0"
description = "pureshell is a Python library providing a framework for the \"Functional Core, Stateful Shell\" architectural pattern. It guides you to write business logic as pure, static functions within Ruleset classes, while StatefulEntity objects manage state and delegate operations. This promotes highly testable, maintainable, and understandable code. Key features include @shell_method for declarative logic linking, @ruleset_provider for default behavior, and dynamic injection of Ruleset instances for runtime flexibility (e.g., strategy pattern, mock testing)."
authors = [
    { name="Dane Jones", email="danerjones@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Core dependencies (none required for core usage)
]

[project.optional-dependencies]
examples = ["pygame"]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/zinthose/pureshell"
"Bug Tracker" = "https://github.com/zinthose/pureshell/issues"

[tool.setuptools.packages.find]
where = ["pureshell"]

[tool.pytest.ini_options]
testpaths = ["tests"]
